app/globals.css
@import 'tailwindcss';

:root {
    color-scheme: dark;
}

@layer base {
    button {
        @apply cursor-pointer;
    }
}

@theme {
    --color-background: #111;
    --color-theme: #c22026;
    --color-theme-dark: #9A1B1F;
    --color-theme-bright: #ff1e1e;
    --color-success: #0dd157;
    --color-primary: #BABABA;
    --color-secondary: #757575;
    --color-tertiary: #404040;

    /* CTF background scroll animation */
    --animate-loop-scroll: loop-scroll 45s linear infinite;

    @keyframes loop-scroll {
        0% {
            transform: translateY(0) translateX(0) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
        }
        100% {
            /* Translate x: 7.5 * scale
               Translate y: 35.26 * scale */
            transform: translateY(calc(0.3526 * var(--tw-scale-y) * max(100vh, 100vw))) translateX(calc(0.075 * var(--tw-scale-x) * max(100vh, 100vw))) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
        }
    }

    --animate-mark-rotate: mark-rotate 8s ease-in-out alternate infinite;
    --animate-mark-pivot-rotate: mark-pivot-rotate 9s ease-in-out alternate infinite;

    @keyframes mark-rotate {
        0% { transform: rotateY(-30deg) }
        100% { transform: rotateY(30deg) }
    }

    @keyframes mark-pivot-rotate {
        0% { transform: rotateZ(8deg) }
        100% { transform: rotateZ(-8deg) }
    }

    --animate-dialog-overlay: dialog-overlay-show 300ms cubic-bezier(0.16, 1, 0.3, 1);
    --animate-dialog-overlay-out: dialog-overlay-hide 200ms cubic-bezier(0.16, 1, 0.3, 1);

    --animate-dialog-content: dialog-content-show 300ms cubic-bezier(0.16, 1, 0.3, 1);
    --animate-dialog-content-out: dialog-content-hide 200ms cubic-bezier(0.16, 1, 0.3, 1);

    --animate-slide-up-fade: slide-up-fade 400ms cubic-bezier(0.16, 1, 0.3, 1);
    --animate-slide-right-fade: slide-right-fade 400ms cubic-bezier(0.16, 1, 0.3, 1);
    --animate-slide-down-fade: slide-down-fade 400ms cubic-bezier(0.16, 1, 0.3, 1);
    --animate-slide-left-fade: slide-left-fade 400ms cubic-bezier(0.16, 1, 0.3, 1);

    @keyframes loop-scroll {
        0% { transform: translateX(0) }
        100% { transform: translateX(calc(-100% / 3)) }
    }

    @keyframes dialog-overlay-show {
        from { opacity: 0 }
        to { opacity: 1 }
    }

    @keyframes dialog-overlay-hide {
        from { opacity: 1 }
        to { opacity: 0 }
    }

    @keyframes dialog-content-show {
        from {
            opacity: 0;
            transform: scale(0.95);
        }
        to {
            opacity: 1;
            transform: scale(1);
        }
    }

    @keyframes dialog-content-hide {
        from {
            opacity: 1;
            transform: scale(1);
        }
        to {
            opacity: 0;
            transform: scale(0.95);
        }
    }

    @keyframes slide-up-fade {
        from {
            opacity: 0;
            transform: translateY(2px);
        }
        to {
            opacity: 1;
            transform: translateY(0);
        }
    }

    @keyframes slide-right-fade {
        from {
            opacity: 0;
            transform: translateX(-2px);
        }
        to {
            opacity: 1;
            transform: translateX(0);
        }
    }

    @keyframes slide-down-fade {
        from {
            opacity: 0;
            transform: translateY(-2px);
        }
        to {
            opacity: 1;
            transform: translateY(0);
        }
    }

    @keyframes slide-left-fade {
        from {
            opacity: 0;
            transform: translateX(2px);
        }
        to {
            opacity: 1;
            transform: translateX(0);
        }
    }
}

@utility container {
    @apply px-3 sm:px-8 lg:px-16 xl:px-20 2xl:px-24;
    margin: 0 auto;
}

